package predicate;

import filesystem.File;

import java.util.List;

public class OrPredicate implements Predicate {

    private final List<Predicate> operands;

    public OrPredicate(List<Predicate> operands) {
        this.operands = operands;
    }

    @Override
    public boolean isMatch(File inputFile) {
        return operands.stream().anyMatch(it -> it.isMatch(inputFile));
    }
}
